# s2t_toolkit

./: .gitignore  Makefile  README.md  Standalone.cpp  install_wenet_deps.sh
cpp_implementation/: Makefile  WenetCppImpl.cpp  (+1 more)
toolkits/com.teracloud.streams.s2t/: CMakeLists.txt  FIX_PLAN.md  IMPLEMENTATION_STATUS.md  NAMING_FIX_PLAN.md  README.md  build.sh  download_models.sh  install_wenet_deps.sh  setup_env.sh  test_build.sh  test_cache_streaming.cpp  test_complete_pipeline.cpp  test_vocab.txt  toolkit.xml
toolkits/com.teracloud.streams.s2t/cmake/: s2t_wenetConfig.cmake.in
toolkits/com.teracloud.streams.s2t/com.teracloud.streams.s2t/: AudioStreamSource.spl  FileAudioSource.spl  Makefile  WebSocketSink.spl  WenetRealtimeSTT.spl  WenetSpeechToText.spl
toolkits/com.teracloud.streams.s2t/com.teracloud.streams.s2t/OnnxSTT/: OnnxSTT.xml  OnnxSTT_cpp.cgt  OnnxSTT_cpp.pm  OnnxSTT_h.cgt  OnnxSTT_h.pm
toolkits/com.teracloud.streams.s2t/com.teracloud.streams.s2t/WenetONNX/: WenetONNX_cpp.cgt  WenetONNX_cpp.pm  WenetONNX_h.cgt
toolkits/com.teracloud.streams.s2t/com.teracloud.streams.s2t/WenetSTT/: WenetSTT.xml  WenetSTT_cpp.cgt  WenetSTT_cpp.pm  WenetSTT_h.cgt  WenetSTT_h.pm
toolkits/com.teracloud.streams.s2t/doc/spldoc/html/: index.html
toolkits/com.teracloud.streams.s2t/docs/: AVAILABLE_MODELS.md  CORRECTED_SUMMARY.md  ONNX_ARCHITECTURE.md  PIPELINE_UPDATE.md  README.md  ZIPFORMER_INTEGRATION.md  ZIPFORMER_RNNT_IMPLEMENTATION.md
toolkits/com.teracloud.streams.s2t/impl/: Makefile  Makefile.common
toolkits/com.teracloud.streams.s2t/impl/include/: OnnxSTTImpl.cpp  OnnxSTTImpl.hpp  OnnxSTTWrapper.cpp  OnnxSTTWrapper.hpp  WenetDynamicLoader.cpp  WenetDynamicLoader.hpp  WenetONNXImpl.cpp  WenetONNXImpl.hpp  WenetSTTImpl.cpp  WenetSTTImpl.hpp  WenetSTTRealtime.hpp  WenetSTTWrapper.cpp  WenetSTTWrapper.hpp
toolkits/com.teracloud.streams.s2t/impl/include/wenet/frontend/: feature_pipeline.h
toolkits/com.teracloud.streams.s2t/impl/lib/: libwenetcpp.cpp
toolkits/com.teracloud.streams.s2t/models/: DOWNLOAD_MODELS.md
toolkits/com.teracloud.streams.s2t/models/wenet_model/: README.md  train.yaml
toolkits/com.teracloud.streams.s2t/models/wenet_model/final.pt/: constants.pkl  data.pkl
toolkits/com.teracloud.streams.s2t/models/wenet_model/final.pt/data/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+627 more)
toolkits/com.teracloud.streams.s2t/samples/: README.md
toolkits/com.teracloud.streams.s2t/samples/BasicWorkingExample/: BasicDemo.spl  Makefile  README.md  SimpleSTT.spl  TestAudioDemo.spl  TestFileAudioSource.spl  WENET_STATUS.md  info.xml  test_wenet  test_wenet.cpp  toolkit.xml
toolkits/com.teracloud.streams.s2t/samples/BasicWorkingExample/output/: BasicDemo.adl  BasicDemo.sab  SimpleSTT.adl
toolkits/com.teracloud.streams.s2t/samples/BasicWorkingExample/output/etc/: adl
toolkits/com.teracloud.streams.s2t/samples/BasicWorkingExample/test_output/: TestFileAudioSource.adl
toolkits/com.teracloud.streams.s2t/samples/CppONNX_OnnxSTT/: Makefile  ONNXRealtime.spl  ONNX_STATUS.md  info.xml  toolkit.xml
toolkits/com.teracloud.streams.s2t/samples/CppONNX_OnnxSTT/output/: ONNXRealtime.adl
toolkits/com.teracloud.streams.s2t/samples/CppONNX_WenetONNX/: ONNXRealtime.spl
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_STT/: Makefile  github_instructions.md  toolkit.xml
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_STT/com.teracloud.streams.s2t.sample/: RealtimeTranscriber.spl
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_STT/etc/: run-transcriber.sh
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_STT/output/: com.teracloud.streams.s2t.sample.RealtimeTranscriber.adl
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_STT/standalone/: Makefile  run_test.sh
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_WenetSTT/: info.xml
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_WenetSTT/etc/: audio-simulator.sh
toolkits/com.teracloud.streams.s2t/samples/CppWeNet_WenetSTT/standalone/: README.md
toolkits/com.teracloud.streams.s2t/samples/PythonONNX_MultiOperator/: BasicPrototype.spl
toolkits/com.teracloud.streams.s2t/test/: WenetTest.cpp
(+229 files in other folders)
